inyectamos dbcontext en Program, creamos migracion

--- a/MisPrimerosPasos.Api/appsettings.json
+++ b/MisPrimerosPasos.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-HQS8GRIS\\SQLEXPRESS;Initial Catalog=MisPrimerosPasos; User Id=sa; Password=Apesol123; Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
